Project/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  namespace: project-namespace
spec:
  rules:
    - http:
        paths:
          - path: /todo-app
            pathType: Prefix
            backend:
              service:
                name: todo-app-svc
                port:
                  number: 8080
